--- a/styles/header_style.css
+++ b/styles/header_style.css
@@ -68,7 +68,7 @@ header{
 }
 .nav-exit-button-container{
     position: relative;
-    top: 2rem;
+    top: 3rem;
     display: none;
     justify-content: center;
     align-items: center;
@@ -387,4 +387,18 @@ header{
         z-index: 3;
     }
 
+}
+@media screen and (max-width: 380px) {
+    .nav-exit-button-container{
+        position: relative;
+        top: 3rem;
+        height: 3rem;
+        width: 3rem;
+    }
+    .nav-exit-button,
+    .nav-exit-button::before,
+    .nav-exit-button::after{
+        width: 2.5rem;
+        height: 0.3rem;
+    }
 }
